Only build and push on push
This commit stops the build pipeline from running (other than initial
cloning) on anything other than a push, mainly to prevent a PR build
from firing. A PR build pipeline would fail because jobs triggered by
pull requests aren't permitted access to the Quay secret.

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,10 @@ platform:
   os: linux
   arch: amd64
 
+trigger:
+  event:
+    - push
+
 steps:
   - name: build & push
     image: plugins/docker
