--- a/.drone.yml
+++ b/.drone.yml
@@ -26,4 +26,29 @@ steps:
         from_secret: QUAY_ROBOT_TOKEN
       DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
 
+---
+
+# we're doing this as a promote to test the script
+# in reality this should normally be defined in hocs-data's .drone.yml
+
+kind: pipeline
+type: kubernetes
+name: teardown-gamma
+
+trigger:
+  event:
+    - promote
+  target:
+    - teardown
+
+steps:
+  - name: teardown gamma
+    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    commands:
+      - cd kube
+      - bash ./teardown.sh
+    environment:
+      ENVIRONMENT: hocs-gamma
+      KUBE_TOKEN:
+        from_secret: hocs_toolbox_hocs_gamma
 ...
