--- a/.drone.yml
+++ b/.drone.yml
@@ -28,18 +28,16 @@ steps:
 
 ---
 
-# we're doing this as a promote to test the script
-# in reality this should normally be defined in hocs-data's .drone.yml
+# we're doing this as a promote so one can manually run it
+# normally this is defined in hocs-data's .drone.yml
 
 kind: pipeline
 type: kubernetes
-name: teardown-gamma
+name: teardown
 
 trigger:
   event:
     - promote
-  target:
-    - teardown
 
 steps:
   - name: teardown gamma
@@ -51,4 +49,21 @@ steps:
       ENVIRONMENT: hocs-gamma
       KUBE_TOKEN:
         from_secret: hocs_toolbox_hocs_gamma
+    target:
+      - teardown
+      - teardown-gamma
+
+  - name: teardown delta
+    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    commands:
+      - cd kube
+      - bash ./teardown.sh
+    environment:
+      ENVIRONMENT: hocs-delta
+      KUBE_TOKEN:
+        from_secret: hocs_toolbox_hocs_delta
+    target:
+      - teardown
+      - teardown-delta
+
 ...
