Use latest branch tag
Use the latest branch tag for this job to bring it more in line with standard convention.

--- a/kube/destroy-info-schema.yaml
+++ b/kube/destroy-info-schema.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: toolbox
-        image: quay.io/ukhomeofficedigital/hocs-toolbox:branch-main # TODO: make this :latest
+        image: quay.io/ukhomeofficedigital/hocs-toolbox:latest
         command: [ "psql", "-c", "DROP SCHEMA IF EXISTS info CASCADE" ]
         env:
           - name: PGPASSWORD
