Single build and push
Optimise the tags that are pushed and can be used. As we only 
might need to use the latest, branch or commit sha these are the 
only ones that we are going to tag. Linked to this, as we don't need 
the branch tag on main, this stops it from pushing the branch_main 
tag unnecessarily.

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,13 +14,16 @@ steps:
       registry: quay.io
       repo: quay.io/ukhomeofficedigital/hocs-toolbox
       tags:
-        - build_${DRONE_BUILD_NUMBER}
         - ${DRONE_COMMIT_SHA}
         - branch-${DRONE_COMMIT_BRANCH/\//_}
     environment:
       DOCKER_PASSWORD:
         from_secret: QUAY_ROBOT_TOKEN
       DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
+    when:
+      branch:
+        exclude:
+          - main
     depends_on:
       - clone
 
@@ -30,6 +33,7 @@ steps:
       registry: quay.io
       repo: quay.io/ukhomeofficedigital/hocs-toolbox
       tags:
+        - ${DRONE_COMMIT_SHA}
         - latest
     environment:
       DOCKER_PASSWORD:
