Remove latest tag in destroy info schema script
Having `:latest` at the end of the image isn't necessary as that is 
what it defaults too. To ensure that we always pull the latest and no 
weird caching happens, this changes sets the `imagePullPolicy` too 
Always.

--- a/kube/destroy-info-schema.yaml
+++ b/kube/destroy-info-schema.yaml
@@ -12,7 +12,8 @@ spec:
     spec:
       containers:
       - name: toolbox
-        image: quay.io/ukhomeofficedigital/hocs-toolbox:latest
+        image: quay.io/ukhomeofficedigital/hocs-toolbox
+        imagePullPolicy: Always
         command: [ "psql", "-c", "DROP SCHEMA IF EXISTS info CASCADE" ]
         env:
           - name: PGPASSWORD
