Pass and add basic bash linter
This adds a very basic defensive linter to the Drone pipeline to catch a
load of confusing problems and Bash subteties we've no chance of
catching ourselves.

This commit moreover removes the broken purge ES script and makes a
few stylistic changes to make the scripts less likely to break in
strange Bash ways, to make the new linter pass:

* added quotes around variables to prevent spaces in values from being
  interpreted as separate arguments
* added -r argument to disallow escape characters to `read` builtin
* changed syntax of the if or statements to one more portable
* uppercased the default action in the prompts (this isn't a linting
  thing, just a personal preference)

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,23 @@
 ---
 kind: pipeline
 type: kubernetes
+name: lint
+
+trigger:
+  event:
+    - push
+
+steps:
+- name: lint bash
+  image: koalaman/shellcheck-alpine
+  commands:
+    - shellcheck *.sh */*.sh
+  depends_on:
+    - clone
+
+---
+kind: pipeline
+type: kubernetes
 name: default
 
 platform:
