HOCS-4110: improve toolbox deployment (#15)
* HOCS-4110: update deployment.yaml

Bring the deployment.yaml in line with what is present within the `kube`
 repository. This adds missing secrets that are required for the
 functionality of some scripts. This change also allows for the
 releasing of user specified versions of the image.

* HOCS-4110: update tag

Instead of defaulting to using a `branch-main` tag use latest as this is
 what branch-main will always be.

* HOCS-4110: add not-prod deployment

Add the ability to deploy the hocs-toolbox to all not-prod environments.

* HOCS-4110: update deploy script

As the deployment yaml has not been moved within a `kd` directory in
line with other projects, this change has been reflected here.

* HOCS-4110: add main branch step

Currently, all pushes update the latest image, this change ensures only
pushes to main trigger this.

* Pass and add basic bash linter

This adds a very basic defensive linter to the Drone pipeline to catch a
load of confusing problems and Bash subteties we've no chance of
catching ourselves.

This commit moreover removes the broken purge ES script and makes a
few stylistic changes to make the scripts less likely to break in
strange Bash ways, to make the new linter pass:

* added quotes around variables to prevent spaces in values from being
  interpreted as separate arguments
* added -r argument to disallow escape characters to `read` builtin
* changed syntax of the if or statements to one more portable
* uppercased the default action in the prompts (this isn't a linting
  thing, just a personal preference)

* HOCS-4110: update ssl cert auth

You can now pass the certificate authority through the
`KUBE_CERTIFICATE_AUTHORITY` variable instead of downloading the
certificate.

Co-authored-by: Douglas Gardner <douglas@chippy.ch>

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,24 @@
 ---
 kind: pipeline
 type: kubernetes
-name: default
+name: lint
+
+trigger:
+  event:
+    - push
+
+steps:
+- name: lint bash
+  image: koalaman/shellcheck-alpine
+  commands:
+    - shellcheck *.sh */*.sh
+  depends_on:
+    - clone
+
+---
+kind: pipeline
+type: kubernetes
+name: build
 
 platform:
   os: linux
@@ -12,6 +29,24 @@ trigger:
     - push
 
 steps:
+  - name: build & push main
+    image: plugins/docker
+    settings:
+      registry: quay.io
+      repo: quay.io/ukhomeofficedigital/hocs-toolbox
+      tags:
+        - build_${DRONE_BUILD_NUMBER}
+        - ${DRONE_COMMIT_SHA}
+        - latest
+    environment:
+      DOCKER_PASSWORD:
+        from_secret: QUAY_ROBOT_TOKEN
+      DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
+    when:
+      branch:
+        include:
+          - main
+
   - name: build & push
     image: plugins/docker
     settings:
@@ -20,11 +55,41 @@ steps:
       tags:
         - build_${DRONE_BUILD_NUMBER}
         - ${DRONE_COMMIT_SHA}
-        - branch-${DRONE_COMMIT_BRANCH/\//_}
     environment:
       DOCKER_PASSWORD:
         from_secret: QUAY_ROBOT_TOKEN
       DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
+    when:
+      branch:
+        exclude:
+          - main
+
+---
+
+kind: pipeline
+type: kubernetes
+name: deploy
+
+trigger:
+  event:
+    - promote
+
+steps:
+  - name: deploy to not-prod
+    image: quay.io/ukhomeofficedigital/kd:latest
+    environment:
+      ENVIRONMENT: ${DRONE_DEPLOY_TO}
+      KUBE_SERVER: ${KUBE_SERVER}
+      KUBE_TOKEN:
+        from_secret: ${DRONE_DEPLOY_TO/-/_}
+    commands:
+      - cd kube
+      - ./deploy.sh
+    when:
+      target:
+        exclude:
+          - "*-prod"
+          - "teardown*"
 
 ---
 
