HOCS-3069: change build step depends_on
Change the `build & push scary` depends_on to depend on the safe image
build. This is because of an issue with drone and the docker plugin.

--- a/.drone.yml
+++ b/.drone.yml
@@ -50,7 +50,7 @@ steps:
 
   - name: build & push scary
     depends_on:
-      - clone
+      - build & push safe
     image: plugins/docker
     settings:
       registry: quay.io
