HOCS-4970: Fix yaml formatting.

--- a/.drone.yml
+++ b/.drone.yml
@@ -61,7 +61,7 @@ trigger:
     - push
 
 steps:
-  - deploySafe
+  - &deploySafe
       name: cs-dev-migration
       image: quay.io/ukhomeofficedigital/kd
       environment:
@@ -73,4 +73,7 @@ steps:
         - ./deploy.sh
       depends_on:
         - clone
+
+  - <<: *deploySafe
+    name: cs-dev-migration
 ...
