--- a/.drone.yml
+++ b/.drone.yml
@@ -29,14 +29,13 @@ trigger:
     - push
 
 steps:
-  - name: build & push safe
+  - name: build & push
     image: plugins/docker
     depends_on:
       - clone
     settings:
       registry: quay.io
       repo: quay.io/ukhomeofficedigital/hocs-toolbox
-      target: safe
       tags:
         - ${DRONE_COMMIT_SHA}-cms-migration
     environment:
@@ -53,7 +52,7 @@ depends_on:
 
 trigger:
   branch:
-    - main
+    - cms-data-migration
   event:
     - push
 
