--- a/.drone.yml
+++ b/.drone.yml
@@ -91,7 +91,7 @@ steps:
       depends_on:
         - clone
   - &deployDangerous
-      name: hocs-qax
+      name: cs-dev
       image: quay.io/ukhomeofficedigital/kd
       environment:
         VERSION: ${DRONE_COMMIT_SHA}-dangerous
@@ -103,66 +103,24 @@ steps:
       depends_on:
         - clone
 
-  - <<: *deploySafe
-    name: cs-dev
-  - <<: *deploySafe
+  #- <<: *deployDangerous # in definition ^
+  #  name: cs-dev
+  - <<: *deployDangerous
     name: cs-qa
- # - <<: *deploySafe # in definition ^
- #   name: cs-demo
-  - <<: *deploySafe
+  - <<: *deployDangerous
     name: wcs-dev
-  - <<: *deploySafe
+  - <<: *deployDangerous
     name: wcs-qa
-  - <<: *deploySafe
-    name: wcs-demo
   - <<: *deployDangerous
     name: hocs-delta
   - <<: *deployDangerous
     name: hocs-gamma
   - <<: *deployDangerous
     name: hocs-epsilon
- #- <<: *deployDangerous # in definition ^
- #  name: hocs-qax
----
-
-# we're doing this as a promote so one can manually run it
-# normally this is defined in hocs-data's .drone.yml
-
-kind: pipeline
-type: kubernetes
-name: teardown
-
-trigger:
-  event:
-    - promote
-
-steps:
-  - name: teardown gamma
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
-    commands:
-      - cd kube
-      - bash ./teardown.sh
-    environment:
-      ENVIRONMENT: hocs-gamma
-      KUBE_TOKEN:
-        from_secret: hocs_toolbox_hocs_gamma
-    when:
-      target:
-        - teardown
-        - teardown-gamma
-
-  - name: teardown delta
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
-    commands:
-      - cd kube
-      - bash ./teardown.sh
-    environment:
-      ENVIRONMENT: hocs-delta
-      KUBE_TOKEN:
-        from_secret: hocs_toolbox_hocs_delta
-    when:
-      target:
-        - teardown
-        - teardown-delta
-
+  - <<: *deployDangerous
+   name: hocs-qax
+  #- <<: *deploySafe  # in definition ^
+  #  name: cs-demo
+  - <<: *deploySafe
+    name: wcs-demo
 ...
