--- a/kube/kd/deployment.yaml
+++ b/kube/kd/deployment.yaml
@@ -35,91 +35,50 @@ spec:
               value: "query"
             - name: KUBE_NAMESPACE
               value: {{.KUBE_NAMESPACE}}
-            - name: HOCS_DB_HOSTNAME
+
+            {{ range split .DATABASES "," }}
+            - name: {{upper .}}_DB_HOST
               valueFrom:
                 secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds
-                  key: endpoint
-            - name: HOCS_DB_PORT
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
+                  key: host
+            - name: {{upper .}}_DB_PORT
               valueFrom:
                 secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
                   key: port
-            - name: HOCS_DB_NAME
+            - name: {{upper .}}_DB_NAME
               valueFrom:
                 secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds
-                  key: db_name
-            - name: HOCS_USERNAME
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
+                  key: name
+            - name: {{upper .}}_DB_SCHEMA_NAME
               valueFrom:
                 secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds
-                  key: username
-            - name: HOCS_PASSWORD
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
+                  key: schema_name
+            - name: {{upper .}}_DB_RO_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
+                  key: read_only_user_name
+            - name: {{upper .}}__DB_RO_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
+                  key: read_only_password
+            - name: {{upper .}}_DB_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
+                  key: user_name
+            - name: {{upper .}}_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{$.KUBE_NAMESPACE}}-{{lower .}}-rds
                   key: password
-            - name: HOCS_INFO_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds
-                  key: info_username
-            - name: HOCS_INFO_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds
-                  key: info_password
-            - name: HOCS_DOCS_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-docs
-                  key: rds_user
-            - name: HOCS_DOCS_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-docs
-                  key: rds_password
-            - name: HOCS_CASEWORK_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-casework
-                  key: rds_user
-            - name: HOCS_CASEWORK_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-casework
-                  key: rds_password
-            - name: HOCS_WORKFLOW_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-workflow
-                  key: rds_user
-            - name: HOCS_WORKFLOW_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-workflow
-                  key: rds_password
-            - name: HOCS_AUDIT_DB_HOSTNAME
-              valueFrom:
-                secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds-audit
-                  key: endpoint
-            - name: HOCS_AUDIT_DB_NAME
-              valueFrom:
-                secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-rds-audit
-                  key: db_name
-            - name: HOCS_AUDIT_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-audit
-                  key: rds_user
-            - name: HOCS_AUDIT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: hocs-audit
-                  key: rds_password
+            {{end}}
+
             - name: ELASTICSEARCH_ACCESS_KEY
               valueFrom:
                 secretKeyRef:
