--- a/.drone.yml
+++ b/.drone.yml
@@ -38,26 +38,10 @@ steps:
     settings:
       registry: quay.io
       repo: quay.io/ukhomeofficedigital/hocs-toolbox
-      target: safe
       tags:
         - build_${DRONE_BUILD_NUMBER}
-        - ${DRONE_COMMIT_SHA}-safe
+        - ${DRONE_COMMIT_SHA}
         - latest
-    environment:
-      DOCKER_PASSWORD:
-        from_secret: QUAY_ROBOT_TOKEN
-      DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
-
-  - name: build & push scary
-    depends_on:
-      - build & push safe
-    image: plugins/docker
-    settings:
-      registry: quay.io
-      repo: quay.io/ukhomeofficedigital/hocs-toolbox
-      target: dangerous
-      tags:
-        - ${DRONE_COMMIT_SHA}-dangerous
     environment:
       DOCKER_PASSWORD:
         from_secret: QUAY_ROBOT_TOKEN
@@ -82,21 +66,9 @@ steps:
       name: cs-demo
       image: quay.io/ukhomeofficedigital/kd
       environment:
-        VERSION: ${DRONE_COMMIT_SHA}-safe
+        VERSION: ${DRONE_COMMIT_SHA}
         KUBE_TOKEN:
           from_secret: KUBE_TOKEN_SAFE
-      commands:
-        - cd kube
-        - ./deploy.sh
-      depends_on:
-        - clone
-  - &deployDangerous
-      name: hocs-qax
-      image: quay.io/ukhomeofficedigital/kd
-      environment:
-        VERSION: ${DRONE_COMMIT_SHA}-dangerous
-        KUBE_TOKEN:
-          from_secret: KUBE_TOKEN
       commands:
         - cd kube
         - ./deploy.sh
@@ -115,54 +87,13 @@ steps:
     name: wcs-qa
   - <<: *deploySafe
     name: wcs-demo
-  - <<: *deployDangerous
+  - <<: *deploySafe
     name: hocs-delta
-  - <<: *deployDangerous
+  - <<: *deploySafe
     name: hocs-gamma
-  - <<: *deployDangerous
+  - <<: *deploySafe
     name: hocs-epsilon
- #- <<: *deployDangerous # in definition ^
- #  name: hocs-qax
----
-
-# we're doing this as a promote so one can manually run it
-# normally this is defined in hocs-data's .drone.yml
-
-kind: pipeline
-type: kubernetes
-name: teardown
-
-trigger:
-  event:
-    - promote
-
-steps:
-  - name: teardown gamma
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
-    commands:
-      - cd kube
-      - bash ./teardown.sh
-    environment:
-      ENVIRONMENT: hocs-gamma
-      KUBE_TOKEN:
-        from_secret: hocs_toolbox_hocs_gamma
-    when:
-      target:
-        - teardown
-        - teardown-gamma
-
-  - name: teardown delta
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
-    commands:
-      - cd kube
-      - bash ./teardown.sh
-    environment:
-      ENVIRONMENT: hocs-delta
-      KUBE_TOKEN:
-        from_secret: hocs_toolbox_hocs_delta
-    when:
-      target:
-        - teardown
-        - teardown-delta
+  - <<: *deploySafe
+    name: hocs-qax
 
 ...
